--- a/Image-annotating Helper.ipynb
+++ b/Image-annotating Helper.ipynb
@@ -241,7 +241,7 @@
     "    ax.imshow(Image.open(os.path.join(root,annot_im)))\n",
     "    plt.show()\n",
     "else:\n",
-    "    print('kek, get fucked nigger')"
+    "    print('file not found')"
    ]
   },
   {
